# Task_manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
MyService/: main.py
MyService/api_v1/: __init__.py
MyService/api_v1/tasks/: crud.py  views.py
MyService/core/: config.py  db.py
MyService/core/entities/: tasks.py
MyService/core/models/: __init__.py  base.py  db_helper.py  tables.py
MyService/tests/: conftest.py  test_api.py  utils.py
