[tool.poetry]
name = "myservice"
version = "0.1.0"
description = "this my app"
authors = ["muhstefan <muhstefang@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.115.12,<0.116.0"
pydantic = { version = ">=2.11.4,<3.0.0", extras = ["email"] }
uvicorn = { version = ">=0.34.2,<0.35.0", extras = ["standard"] }
sqlalchemy = { version = ">=2.0.41,<3.0.0", extras = ["asyncio"] }
pydantic-settings = ">=2.9.1,<3.0.0"
sqlmodel = "^0.0.24"
pytest-asyncio = "^1.0.0"
faker = "^37.4.0"
asyncpg = "^0.30.0"
testcontainers = "^4.12.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
